Terminada la hoja de vida

--- a/index.html
+++ b/index.html
@@ -4,75 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoja de Vida</title>
+    <link rel="stylesheet" type="text/css" href="Arreglos.css">
 </head>
-<body style="background-color: rgba(139, 233, 240, 0.288);">
-<h1>Información general</h1>   
-<h2>Yovanni Pedroza</h2>
-<h2>yovannipedroza@gmail.com</h2>
-<h2>3003815059</h2>
-<h2>Bogotá - Colombia</h2>
-<a href="https://github.com/YovanniPedroza">GitHub</a>
-<br>
-<a href="https://www.linkedin.com/in/yovanni-pedroza/">Linkedin</a>
-<br>
-<h2>EXPERIENCIA LABORAL</h2>
-<ol>
-    <li>SALUDCOOP
+<body style="background-color: rgba(102, 241, 126, 0.438);">
+    <div class="caja1">
+        <img src="FOTO.jpg" class="foto">
+        <br><br> 
+        <h1>INFORMACIÓN GENERAL</h1>   
+        <h2>yovannipedroza@gmail.com</h2>
+        <h2>3003815059</h2>
+        <h2>Bogotá - Colombia</h2>
+            <img src="GitHub-Octocat.jpg" class="img">
+            <a href="https://github.com/YovanniPedroza" class="link">Link</a>
+        <br>
+        <img src="linkedin-2815969_640.jpg" class="img">
+        <a href="https://www.linkedin.com/in/yovanni-pedroza/">Link</a>
+        <br>
+        <h2 class="subtitulo">HABILIDADES</h2>
         <ul>
-            <li>10 AÑOS DE EXPERICIENCIA</li>
-            <li>CARGO DE SERVICIO AL CLIENTE</li>
-            <li>ATENCIÓN USUARIOS</li>
+            <li class="linea">JAVASCRIP</li>
+            <li class="linea">REACT</li>
+            <li class="linea">FIREBASE</li>
         </ul>
-    </li>
-    <li>MEDPLUS</li>
-    <ul>
-        <li>12 AÑOS DE EXPERICIENCIA</li>
-        <li>CARGO DE AUTORIZACIONES MÉDICAS</li>
-        <li>ATENCIÓN USUARIOS ANALIZANDO CADA CASO PUNTUALMENTE EN CUANTO A COBERTURAS</li>
-    </ul>
-</ol>
-<h2>HABILIDADES TECNICAS Y TECNOLOGICAS</h2>
-<table>
-    <tr>
-      <td>JAVASCRITP</td>
-      <td>REACT</td>
-      <td>FIREBASE</td>
-    </tr>
-  </table>
-  <h2>INTERESES</h2>
-<table>
-    <tr>
-      <td>JAVASCRITP</td>
-    </tr>      
-    <tr>
-        <td>PHYTON</td>  
-    </tr>
-    <tr>
-        <td>CSS</td>  
-    </tr>  
-    <tr>
-        <td>REALIDAD VIRTUAL</td>  
-    </tr>  
-    <tr>
-        <td>METAVERSO</td>  
-    </tr>  
-    <tr>
-        <td>MQL5</td>  
-    </tr>  
-  </table>
-  <br>
-  <form>
-    <label for="correo">Correo:</label>
-    <input type="email" id="correo" name="correo" required>
-
-    <br>
-
-    <label for="mensaje">Mensaje:</label>
-    <textarea id="mensaje" name="mensaje" rows="4" cols="50" required></textarea>
-
-    <br>
-
-    <input type="submit" value="Enviar">
-  </form>
-</body>
+        <h2 class="subtitulo">SOFTWARES</h2>
+        <ol>
+            <li class="linea">JAVASCRIP</li>
+            <li class="linea">REACT</li>
+            <li class="linea">FIREBASE</li>
+        </ul>
+        <h2 class="subtitulo">HOBBIES</h2>
+        <img src="LEER.jpg" class="img3">
+        <img src="ESCUCHAR.PNG" class="img3">
+        <img src="FUTBOL.PNG" class="img3">
+        <img src="TRADING.png" class="img3">
+        <br>
+        <form>
+            <label for="correo">Correo:</label>
+            <input type="email" id="correo" name="correo" required>
+            <br>
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="4" cols="40" required></textarea>
+            <br>
+            <input type="submit" value="Enviar">
+          </form>
+          
+    </div>
+            <div class="caja3">
+            <img src="mail.png" class="img2">
+            </div>     
+    <div class="caja4">
+                <img src="celular.png" class="img2">
+    </div>   
+    <div class="caja5">
+        <img src="location.jpg" class="img2">
+    </div>   
+        <div class="caja2">
+        <h2>Yovanni Pedroza</h2>
+        <div class="INFO-PERSONAL">
+            <H2 class="subtitulo">INFORMACIÓN PERSONAL</H2>            
+        </div>
+         <br>
+        <p class="parrafo">Soy un desarrollador Full Stack altamente capacitado y apasionado con experiencia en el desarrollo front-end y back-end, así como en el diseño de bases de datos. Mi enfoque se centra en crear soluciones web integrales, desde la concepción hasta la implementación. Poseo habilidades en HTML5, CSS3, JavaScript, React, Angular, Node.js y PHP, así como experiencia en la administración de bases de datos SQL y NoSQL. Soy un comunicador efectivo y trabajo bien en equipos colaborativos. Estoy emocionado por contribuir con mi experiencia y habilidades al éxito de tu equipo y proyectos.</p>
+        <div class="EDUCACION">
+            <H2 class="subtitulo">EDUCACIÓN</H2>            
+        </div>
+        <ul class="parrafo">
+            <li>Protalento</li>
+            <li>FreeCodeCamp</li>
+            <li>Udemy</li>
+            <li>Codecademy</li>
+        </ul>
+        <div class="EXPERIENCIA">
+            <H2 class="subtitulo">EXPERIENCIA</H2>            
+        </div>
+        <ul class="parrafo">
+            <li>Google</li>
+            <li>Didi</li>
+            <li>Facebook</li>
+            <li>Programadores</li>
+        </ul>
+    </div>     
+  </body>
 </html>
